# course

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  tasks.c  tasks.h
libs/data_structures/tests/matrix/: testFunctionsOfMatrix.c  testFunctionsOfMatrix.h  test_matrix_functions.c  test_matrix_functions.h  test_matrix_tasks.c  test_matrix_tasks.h
libs/data_structures/tests/matrix/matrix_tasks/: test_matrix_tasks.c  test_matrix_tasks.h
libs/data_structures/tests/matrix/matrix_tests/: testFunctionsOfMatrix.c  testFunctionsOfMatrix.h
libs/data_structures/tests/vector/: testFunctionsOfVector.c  testFunctionsOfVector.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/string/: string_.c  string_.h
libs/string/tasks/: areThereTheAnagramsInTheString.h  areThereTheSameWordsInTheString.h  digitsToEndLettersToStart.h  fillTheSmallerString.h  findLastWordOfFirstStringThatInTheSecondString.h  findWordBeforeFirstCommonWord.h  getCountOfPalindromesWords.h  getStringDifferentFromLastWord.h  getStringWithAlternatingWords.h  isIncludedEachLetterOfTheWordInTheString.h  isLexicographicallyOrdered.h  printWordBeforeFirstWordWithA.h  printWordsInReverseOrder.h  removeExtraSpaces.h  removeNonLetter.c  removeNonLetters.c  removeNonLetters.h  removeWordsLikeLast.h  replaceDigitForEquivalentCountOfSpaces.h  replaceWords.h  reverseWordOrder.h
libs/string/tests/: test_string.c  test_string.h  test_string_tasks.c  test_string_tasks.h
libs/tests/: test_string.c  test_string.h  test_string_tasks.c  test_string_tasks.h
