add_library(data_structures
        vector/vector.c
        vector/vectorVoid.c
        matrix/matrix.c tests/vector/testFunctionsOfVector.c tests/vector/testFunctionsOfVector.h tests/matrix/matrix_tests/testFunctionsOfMatrix.c tests/matrix/matrix_tests/testFunctionsOfMatrix.h matrix/tasks.c matrix/tasks.h tests/matrix/matrix_tasks/test_matrix_tasks.c tests/matrix/matrix_tasks/test_matrix_tasks.h)

