add_library(data_structures
        vector/vector.c
        vector/vectorVoid.c
        matrix/matrix.c tests/vector/testFunctionsOfVector.c tests/vector/testFunctionsOfVector.h tests/matrix/test_matrix_functions.c tests/matrix/test_matrix_functions.h matrix/tasks.c matrix/tasks.h tests/matrix/test_matrix_tasks.c tests/matrix/test_matrix_tasks.h)

